--- a/Latex Document/Latex Files/References.bib
+++ b/Latex Document/Latex Files/References.bib
@@ -21,7 +21,7 @@ url = {https://itextpdf.com/products/itextsharp},
 @online{LibraryDef,
     title = {What is a Programming Library? A Beginner’s Guide},
     authors = {Rachel Meltzer},
-    url = {https://careerfoundry.com/en/blog/web-development/programming-library-guide/#what-is-a-programming-library},
+    url = {https://careerfoundry.com/en/blog/web-development/programming-library-guide/\#what-is-a-programming-library},
     website = {CareerFoundry},
     year = {2023},
     month = {1},
@@ -36,5 +36,13 @@ url = {https://itextpdf.com/products/itextsharp},
     year = {2023},
     month = {1},
     day = {8},
-    note = {Accessed on: October 4, 2024},
+    note = {Accessed on: October 6, 2024},
+}
+
+@online{EncryptionAndDecryption,
+	title={Encryption and Decryption},
+	url={https://docs.oracle.com/cd/E19047-01/sunscreen151/806-5397/i996724/index.html\#:~:text=Encryption\%20is\%20the\%20process\%20by,its\%20original\%20(readable)\%20format.},
+	website={Oracle},
+	year={2010},
+	note = {Accessed on: October 4, 2024},
 }
